[package]
name = "nwipe"
version = "0.3.1"
edition = "2021"
description = "Secure disk wiping tool (Rust Edition)"
authors = ["Sebastiaan Koetsier", "Original by Darik Horn <dajhorn-dban@vanadac.com>", "Modified by Andy Beverley <andy@andybev.com>"]
license = "GPL-2.0"
repository = "https://github.com/sebastiaankoetsier/nwipe"
keywords = ["security", "disk", "wipe", "erase", "data"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
libc = "0.2"
nix = "0.26"
clap = { version = "4.3", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
rand = "0.8"
rand_isaac = "0.3"
rand_mt = "4.2"
getrandom = "0.2"
signal-hook = "0.3"
crossterm = "0.26"
lazy_static = "1.4"
os_info = "3.7"
sys-info = "0.9"

# GUI dependencies
eframe = "0.24.0"
egui = "0.24.0"
egui_extras = "0.24.0"
rfd = "0.12.0"  # File dialog
